# hackle

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
demo/: sample_task.txt
scripts/: reliability.py
src/hackle/: __init__.py  action_tier.py  audit.py  cli.py  escalation.py  fingerprint.py  llm.py  loop.py  tools.py
tests/: test_action_tier.py  test_loop.py
