[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hackle"
version = "0.1.0"
description = "A trust-tier-gated executor agent: a deterministic classifier gates a local LLM's tool actions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "goweft" }]
dependencies = ["httpx==0.28.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
hackle = "hackle.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
